--- a/index.html
+++ b/index.html
@@ -3,42 +3,111 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Chat App</title>
+<title>Whisp</title>
 <style>
-  html, body {margin:0;padding:0;height:100%;background:#ece5dd;font-family:system-ui,sans-serif;}
+  html, body {
+    margin:0; padding:0; height:100%;
+    background:#e8f0fe;
+    font-family: "Segoe UI", Roboto, sans-serif;
+  }
   main {height:100%;display:flex;flex-direction:column;}
+
+  /* Screens */
   .screen{display:none;flex-direction:column;height:100%;}
   .screen.active{display:flex;}
-  #loginScreen{justify-content:center;align-items:center;background:#075e54;color:white;text-align:center;padding:20px;}
-  #loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
-  #loginBtn{background:#25d366;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;}
+
+  /* Login */
+  #loginScreen{
+    justify-content:center;align-items:center;
+    background:#1a73e8;color:white;text-align:center;padding:20px;
+  }
+  #loginScreen h2{font-size:2rem;margin-bottom:20px;}
+  #loginScreen input{
+    display:block;width:80%;margin:8px auto;padding:10px;
+    border-radius:8px;border:none;font-size:1rem;
+  }
+  #loginBtn{
+    background:#4285f4;color:white;border:none;
+    padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;
+    box-shadow:0 2px 5px rgba(0,0,0,0.2);
+  }
+
+  /* Chat List */
   #chatListScreen{background:#fff;flex:1;}
-  #chatListHeader{background:#075e54;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
+  #chatListHeader{
+    background:#1a73e8;color:white;padding:14px;
+    display:flex;justify-content:space-between;align-items:center;font-weight:600;
+  }
   #chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
-  .chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
-  .chatItem:hover{background:#f9f9f9;}
-  #bottomMenu{display:flex;justify-content:space-around;align-items:center;position:fixed;bottom:0;left:0;width:100%;background:#075e54;padding:10px 0;}
-  #bottomMenu button{background:#25d366;border:none;color:white;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
-  #chatScreen{background:#ece5dd;}
-  #chatHeader{background:#075e54;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
-  #chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
-  #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
-  .msg{max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;position:relative;word-wrap:break-word;}
-  .me{align-self:flex-end;background:#dcf8c6;}
-  .them{align-self:flex-start;background:#fff;}
-  .timestamp{font-size:0.75rem;color:#666;text-align:right;margin-top:2px;}
-  #replyBar{display:none;background:#f0f0f0;padding:6px 10px;border-left:4px solid #25d366;font-size:0.9rem;}
-  #inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;}
-  #message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
-  #sendBtn{background:#128c7e;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
-  @media (min-width:700px){main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}#bottomMenu{position:static;border-top:1px solid #ccc;}}
+  .chatItem{
+    padding:14px;border-bottom:1px solid #eee;cursor:pointer;
+  }
+  .chatItem:hover{background:#f1f5ff;}
+
+  /* Bottom Menu */
+  #bottomMenu{
+    display:flex;justify-content:space-around;align-items:center;
+    position:fixed;bottom:0;left:0;width:100%;
+    background:#1a73e8;padding:10px 0;
+  }
+  #bottomMenu button{
+    background:#fff;border:none;color:#1a73e8;
+    padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;
+  }
+
+  /* Chat */
+  #chatScreen{background:#e8f0fe;}
+  #chatHeader{
+    background:#1a73e8;color:white;padding:12px;
+    display:flex;justify-content:space-between;align-items:center;
+  }
+  #chatHeader button{
+    background:none;border:none;color:white;font-size:1rem;cursor:pointer;
+  }
+  #messages{
+    flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;
+  }
+  .msg{
+    max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;
+    position:relative;word-wrap:break-word;
+  }
+  .me{
+    align-self:flex-end;background:#cfe2ff;
+  }
+  .them{
+    align-self:flex-start;background:#fff;
+  }
+  .timestamp{
+    font-size:0.75rem;color:#666;text-align:right;margin-top:2px;
+  }
+
+  #replyBar{
+    display:none;background:#e3f2fd;padding:6px 10px;
+    border-left:4px solid #1a73e8;font-size:0.9rem;
+  }
+  #inputBar{
+    display:flex;align-items:center;background:#fff;padding:8px;
+    border-top:1px solid #ccc;
+  }
+  #message{
+    flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;
+  }
+  #sendBtn{
+    background:#1a73e8;color:white;border:none;border-radius:50%;
+    width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;
+  }
+
+  @media (min-width:700px){
+    main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}
+    #bottomMenu{position:static;border-top:1px solid #ccc;}
+  }
 </style>
 </head>
 <body>
 <main>
   <section id="loginScreen" class="screen active">
     <div>
-      <h2>Chat Login</h2>
+      <h2>Welcome to Whisp 💬</h2>
       <input id="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
       <input id="username" placeholder="Username (for signup)" />
@@ -47,7 +116,7 @@
   </section>
 
   <section id="chatListScreen" class="screen">
-    <div id="chatListHeader">Your Chats</div>
+    <div id="chatListHeader">Whisp Chats</div>
     <div id="chatList"></div>
     <div id="bottomMenu">
       <button id="dmBtn">DM</button>
@@ -76,14 +145,14 @@
   import { getDatabase, ref, set, push, get, onChildAdded, off } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
   const firebaseConfig = {
-    apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
-    authDomain: "messagingapp-7ede5.firebaseapp.com",
-    databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
-    projectId: "messagingapp-7ede5",
-    storageBucket: "messagingapp-7ede5.firebasestorage.app",
-    messagingSenderId: "221896974865",
-    appId: "1:221896974865:web:3faca4885e48ee656907b0"
-};
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_AUTH_DOMAIN",
+    databaseURL: "YOUR_DB_URL",
+    projectId: "YOUR_PROJECT_ID",
+    storageBucket: "YOUR_STORAGE_BUCKET",
+    messagingSenderId: "YOUR_SENDER_ID",
+    appId: "YOUR_APP_ID"
+  };
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getDatabase(app);
@@ -141,13 +210,9 @@
     document.getElementById("chatName").textContent=name;
     messagesDiv.innerHTML="";
     show(chatScreen);
-
-    // 🔧 Remove old listener if exists
     if(currentListenerRef){ off(currentListenerRef); }
-
     const msgRef=ref(db,"chats/"+id+"/messages");
     currentListenerRef=msgRef;
-
     onChildAdded(msgRef,s=>renderMessage(s.val()));
   }
 
@@ -155,7 +220,7 @@
     const div=document.createElement("div");
     div.classList.add("msg",m.sender===currentUser.uid?"me":"them");
     div.innerHTML=`
-      ${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #25d366;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}
+      ${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}
       ${m.text}
       <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
     messagesDiv.append(div);
@@ -204,16 +269,13 @@
     loadChats();
   };
 
-  // ✅ Service worker notifications
   if("serviceWorker"in navigator){
-    navigator.serviceWorker.register("sw.js").then(()=>{
-      Notification.requestPermission();
-    });
+    navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission());
   }
   function showNotification(title,body){
     if(!("Notification"in window))return;
     if(Notification.permission==="granted"){
-      navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/1384/1384031.png"}));
+      navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/906/906349.png"}));
     }
   }
 </script>
