--- a/index.html
+++ b/index.html
@@ -5,102 +5,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Whisp</title>
 <style>
-  html, body {
-    margin:0; padding:0; height:100%;
-    background:#e8f0fe;
-    font-family: "Segoe UI", Roboto, sans-serif;
-  }
+  html, body {margin:0;padding:0;height:100%;background:#e8f0fe;font-family:"Segoe UI", Roboto, sans-serif;}
   main {height:100%;display:flex;flex-direction:column;}
 
-  /* Screens */
   .screen{display:none;flex-direction:column;height:100%;}
   .screen.active{display:flex;}
 
   /* Login */
-  #loginScreen{
-    justify-content:center;align-items:center;
-    background:#1a73e8;color:white;text-align:center;padding:20px;
-  }
+  #loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;}
   #loginScreen h2{font-size:2rem;margin-bottom:20px;}
-  #loginScreen input{
-    display:block;width:80%;margin:8px auto;padding:10px;
-    border-radius:8px;border:none;font-size:1rem;
-  }
-  #loginBtn{
-    background:#4285f4;color:white;border:none;
-    padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;
-    box-shadow:0 2px 5px rgba(0,0,0,0.2);
-  }
+  #loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
+  #loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 
   /* Chat List */
   #chatListScreen{background:#fff;flex:1;}
-  #chatListHeader{
-    background:#1a73e8;color:white;padding:14px;
-    display:flex;justify-content:space-between;align-items:center;font-weight:600;
-  }
+  #chatListHeader{background:#1a73e8;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
   #chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
-  .chatItem{
-    padding:14px;border-bottom:1px solid #eee;cursor:pointer;
-  }
+  .chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
   .chatItem:hover{background:#f1f5ff;}
 
   /* Bottom Menu */
-  #bottomMenu{
-    display:flex;justify-content:space-around;align-items:center;
-    position:fixed;bottom:0;left:0;width:100%;
-    background:#1a73e8;padding:10px 0;
-  }
-  #bottomMenu button{
-    background:#fff;border:none;color:#1a73e8;
-    padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;
-  }
+  #bottomMenu{display:flex;justify-content:space-around;align-items:center;position:fixed;bottom:0;left:0;width:100%;background:#1a73e8;padding:10px 0;}
+  #bottomMenu button{background:#fff;border:none;color:#1a73e8;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
 
   /* Chat */
   #chatScreen{background:#e8f0fe;}
-  #chatHeader{
-    background:#1a73e8;color:white;padding:12px;
-    display:flex;justify-content:space-between;align-items:center;
-  }
-  #chatHeader button{
-    background:none;border:none;color:white;font-size:1rem;cursor:pointer;
-  }
-  #messages{
-    flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;
-  }
-  .msg{
-    max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;
-    position:relative;word-wrap:break-word;
-  }
-  .me{
-    align-self:flex-end;background:#cfe2ff;
-  }
-  .them{
-    align-self:flex-start;background:#fff;
-  }
-  .timestamp{
-    font-size:0.75rem;color:#666;text-align:right;margin-top:2px;
-  }
+  #chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
+  #chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
+  #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
+  .msg{max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;position:relative;word-wrap:break-word;}
+  .me{align-self:flex-end;background:#cfe2ff;}
+  .them{align-self:flex-start;background:#fff;}
+  .timestamp{font-size:0.75rem;color:#666;text-align:right;margin-top:2px;}
 
-  #replyBar{
-    display:none;background:#e3f2fd;padding:6px 10px;
-    border-left:4px solid #1a73e8;font-size:0.9rem;
-  }
-  #inputBar{
-    display:flex;align-items:center;background:#fff;padding:8px;
-    border-top:1px solid #ccc;
-  }
-  #message{
-    flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;
-  }
-  #sendBtn{
-    background:#1a73e8;color:white;border:none;border-radius:50%;
-    width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;
-  }
+  /* Reply Bar */
+  #replyBar{display:none;background:#e3f2fd;padding:6px 10px;border-left:4px solid #1a73e8;font-size:0.9rem;align-items:center;display:flex;justify-content:space-between;}
+  #replyText{flex:1;}
+  #cancelReply{background:none;border:none;color:#1a73e8;font-weight:bold;cursor:pointer;margin-left:10px;}
 
-  @media (min-width:700px){
-    main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}
-    #bottomMenu{position:static;border-top:1px solid #ccc;}
-  }
+  #inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;}
+  #message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
+  #sendBtn{background:#1a73e8;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
+
+  @media (min-width:700px){main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}#bottomMenu{position:static;border-top:1px solid #ccc;}}
 </style>
 </head>
 <body>
@@ -131,7 +78,10 @@
       <span id="chatName">Chat</span>
     </div>
     <div id="messages"></div>
-    <div id="replyBar"></div>
+    <div id="replyBar">
+      <span id="replyText"></span>
+      <button id="cancelReply">✖</button>
+    </div>
     <div id="inputBar">
       <input id="message" placeholder="Type a message..." />
       <button id="sendBtn">➤</button>
@@ -140,9 +90,9 @@
 </main>
 
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-  import { getDatabase, ref, set, push, get, onChildAdded, off } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+import { getDatabase, ref, set, push, get, onChildAdded, off } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
    const firebaseConfig = {
     apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
@@ -154,131 +104,146 @@
     appId: "1:221896974865:web:3faca4885e48ee656907b0"
 
   };
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getDatabase(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getDatabase(app);
 
-  const loginScreen=document.getElementById("loginScreen"),
-        chatListScreen=document.getElementById("chatListScreen"),
-        chatScreen=document.getElementById("chatScreen"),
-        chatList=document.getElementById("chatList"),
-        messagesDiv=document.getElementById("messages"),
-        replyBar=document.getElementById("replyBar"),
-        messageInput=document.getElementById("message");
+const loginScreen=document.getElementById("loginScreen"),
+      chatListScreen=document.getElementById("chatListScreen"),
+      chatScreen=document.getElementById("chatScreen"),
+      chatList=document.getElementById("chatList"),
+      messagesDiv=document.getElementById("messages"),
+      replyBar=document.getElementById("replyBar"),
+      replyText=document.getElementById("replyText"),
+      cancelReplyBtn=document.getElementById("cancelReply"),
+      messageInput=document.getElementById("message");
 
-  let currentUser=null, currentChatId=null, replyTo=null, currentListenerRef=null;
+let currentUser=null, currentChatId=null, replyTo=null, currentListenerRef=null;
 
-  const show=(s)=>{[loginScreen,chatListScreen,chatScreen].forEach(e=>e.classList.remove("active"));s.classList.add("active");};
+const show=(s)=>{[loginScreen,chatListScreen,chatScreen].forEach(e=>e.classList.remove("active"));s.classList.add("active");};
 
-  document.getElementById("loginBtn").onclick=async()=>{
-    const email=document.getElementById("email").value.trim();
-    const password=document.getElementById("password").value.trim();
-    const username=document.getElementById("username").value.trim();
-    if(!email||!password)return alert("Enter credentials.");
-    try{
-      const cred=await signInWithEmailAndPassword(auth,email,password);
-      currentUser=cred.user;
-    }catch{
-      const cred=await createUserWithEmailAndPassword(auth,email,password);
-      currentUser=cred.user;
-      await set(ref(db,"users/"+currentUser.uid),{username,email});
-    }
-  };
-
-  onAuthStateChanged(auth,async user=>{
-    if(user){currentUser=user;loadChats();show(chatListScreen);}else{show(loginScreen);}
-  });
-
-  async function loadChats(){
-    chatList.innerHTML="";
-    const chats=await get(ref(db,"chats"));
-    if(chats.exists()){
-      chats.forEach(c=>{
-        const chat=c.val();
-        if(chat.members&&chat.members.includes(currentUser.uid)){
-          const div=document.createElement("div");
-          div.className="chatItem";
-          div.textContent=chat.name;
-          div.onclick=()=>openChat(c.key,chat.name);
-          chatList.append(div);
-        }
-      });
-    }
+document.getElementById("loginBtn").onclick=async()=>{
+  const email=document.getElementById("email").value.trim();
+  const password=document.getElementById("password").value.trim();
+  const username=document.getElementById("username").value.trim();
+  if(!email||!password)return alert("Enter credentials.");
+  try{
+    const cred=await signInWithEmailAndPassword(auth,email,password);
+    currentUser=cred.user;
+  }catch{
+    const cred=await createUserWithEmailAndPassword(auth,email,password);
+    currentUser=cred.user;
+    await set(ref(db,"users/"+currentUser.uid),{username,email});
   }
+};
 
-  async function openChat(id,name){
-    currentChatId=id;
-    document.getElementById("chatName").textContent=name;
-    messagesDiv.innerHTML="";
-    show(chatScreen);
-    if(currentListenerRef){ off(currentListenerRef); }
-    const msgRef=ref(db,"chats/"+id+"/messages");
-    currentListenerRef=msgRef;
-    onChildAdded(msgRef,s=>renderMessage(s.val()));
-  }
+onAuthStateChanged(auth,async user=>{
+  if(user){currentUser=user;loadChats();show(chatListScreen);}else{show(loginScreen);}
+});
 
-  function renderMessage(m){
-    const div=document.createElement("div");
-    div.classList.add("msg",m.sender===currentUser.uid?"me":"them");
-    div.innerHTML=`
-      ${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}
-      ${m.text}
-      <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
-    messagesDiv.append(div);
-    messagesDiv.scrollTop=messagesDiv.scrollHeight;
-    div.addEventListener("touchstart",e=>div.startX=e.touches[0].clientX);
-    div.addEventListener("touchmove",e=>{
-      const diff=e.touches[0].clientX-div.startX;
-      if(diff>70)showReplyBar(m.text);
+async function loadChats(){
+  chatList.innerHTML="";
+  const chats=await get(ref(db,"chats"));
+  if(chats.exists()){
+    chats.forEach(c=>{
+      const chat=c.val();
+      if(chat.members&&chat.members.includes(currentUser.uid)){
+        const div=document.createElement("div");
+        div.className="chatItem";
+        div.textContent=chat.name;
+        div.onclick=()=>openChat(c.key,chat.name);
+        chatList.append(div);
+      }
     });
-    div.onclick=()=>showReplyBar(m.text);
-    if(m.sender!==currentUser.uid){showNotification("New message",m.text);}
   }
+}
 
-  function showReplyBar(text){replyTo=text;replyBar.style.display="block";replyBar.textContent="Replying to: "+text.slice(0,40);}
+async function openChat(id,name){
+  currentChatId=id;
+  document.getElementById("chatName").textContent=name;
+  messagesDiv.innerHTML="";
+  show(chatScreen);
+  if(currentListenerRef){ off(currentListenerRef); }
+  const msgRef=ref(db,"chats/"+id+"/messages");
+  currentListenerRef=msgRef;
+  onChildAdded(msgRef,s=>renderMessage(s.val()));
+}
 
-  document.getElementById("sendBtn").onclick=async()=>{
-    const text=messageInput.value.trim();
-    if(!text||!currentChatId)return;
-    await push(ref(db,"chats/"+currentChatId+"/messages"),{sender:currentUser.uid,text,replyTo,time:Date.now()});
-    messageInput.value="";replyBar.style.display="none";replyTo=null;
-  };
+function renderMessage(m){
+  const div=document.createElement("div");
+  div.classList.add("msg",m.sender===currentUser.uid?"me":"them");
+  div.innerHTML=`
+    ${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}
+    ${m.text}
+    <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
+  messagesDiv.append(div);
+  messagesDiv.scrollTop=messagesDiv.scrollHeight;
 
-  document.getElementById("backBtn").onclick=()=>{currentChatId=null;if(currentListenerRef){off(currentListenerRef);}show(chatListScreen);};
-  document.getElementById("logoutBtn").onclick=async()=>{await signOut(auth);currentUser=null;show(loginScreen);};
+  // Swipe to reply
+  div.addEventListener("touchstart",e=>div.startX=e.touches[0].clientX);
+  div.addEventListener("touchmove",e=>{
+    const diff=e.touches[0].clientX-div.startX;
+    if(diff>70)showReplyBar(m.text);
+  });
+  div.onclick=()=>showReplyBar(m.text);
 
-  document.getElementById("groupBtn").onclick=async()=>{
-    const name=prompt("Group name:");if(!name)return;
-    const input=prompt("Enter usernames (comma-separated):");
-    const usernames=input?input.split(",").map(u=>u.trim()):[];
-    const usersSnap=await get(ref(db,"users"));
-    const memberIds=[currentUser.uid];
-    usersSnap.forEach(u=>{const val=u.val();if(usernames.includes(val.username))memberIds.push(u.key);});
-    const refNew=push(ref(db,"chats"));
-    await set(refNew,{name,isGroup:true,members:memberIds});
-    loadChats();
-  };
+  // Notification
+  if(m.sender!==currentUser.uid) showNotification("New message",m.text);
+}
 
-  document.getElementById("dmBtn").onclick=async()=>{
-    const uname=prompt("Username to DM:");
-    const users=await get(ref(db,"users"));
-    let uid=null;
-    users.forEach(u=>{if(u.val().username===uname)uid=u.key;});
-    if(!uid)return alert("User not found.");
-    const refNew=push(ref(db,"chats"));
-    await set(refNew,{name:uname,isGroup:false,members:[currentUser.uid,uid]});
-    loadChats();
-  };
+function showReplyBar(text){
+  replyTo=text;
+  replyBar.style.display="flex";
+  replyText.textContent="Replying to: "+text.slice(0,40);
+}
 
-  if("serviceWorker"in navigator){
-    navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission());
+cancelReplyBtn.onclick=()=>{
+  replyTo=null;
+  replyBar.style.display="none";
+};
+
+document.getElementById("sendBtn").onclick=async()=>{
+  const text=messageInput.value.trim();
+  if(!text||!currentChatId)return;
+  await push(ref(db,"chats/"+currentChatId+"/messages"),{sender:currentUser.uid,text,replyTo,time:Date.now()});
+  messageInput.value="";
+  replyTo=null;
+  replyBar.style.display="none";
+};
+
+document.getElementById("backBtn").onclick=()=>{currentChatId=null;if(currentListenerRef){off(currentListenerRef);}show(chatListScreen);};
+document.getElementById("logoutBtn").onclick=async()=>{await signOut(auth);currentUser=null;show(loginScreen);};
+
+document.getElementById("groupBtn").onclick=async()=>{
+  const name=prompt("Group name:");if(!name)return;
+  const input=prompt("Enter usernames (comma-separated):");
+  const usernames=input?input.split(",").map(u=>u.trim()):[];
+  const usersSnap=await get(ref(db,"users"));
+  const memberIds=[currentUser.uid];
+  usersSnap.forEach(u=>{const val=u.val();if(usernames.includes(val.username))memberIds.push(u.key);});
+  const refNew=push(ref(db,"chats"));
+  await set(refNew,{name,isGroup:true,members:memberIds});
+  loadChats();
+};
+
+document.getElementById("dmBtn").onclick=async()=>{
+  const uname=prompt("Username to DM:");
+  const users=await get(ref(db,"users"));
+  let uid=null;
+  users.forEach(u=>{if(u.val().username===uname)uid=u.key;});
+  if(!uid)return alert("User not found.");
+  const refNew=push(ref(db,"chats"));
+  await set(refNew,{name:uname,isGroup:false,members:[currentUser.uid,uid]});
+  loadChats();
+};
+
+if("serviceWorker"in navigator){navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission());}
+function showNotification(title,body){
+  if(!("Notification"in window))return;
+  if(Notification.permission==="granted"){
+    navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/906/906349.png"}));
   }
-  function showNotification(title,body){
-    if(!("Notification"in window))return;
-    if(Notification.permission==="granted"){
-      navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/906/906349.png"}));
-    }
-  }
+}
 </script>
 </body>
 </html>
