--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Whisp</title>
 <style>
-  html, body {margin:0;padding:0;height:100%;background:#e8f0fe;font-family:"Segoe UI", Roboto, sans-serif;}
-  main {height:100%;display:flex;flex-direction:column;}
+html, body {margin:0;padding:0;height:100%;background:#e8f0fe;font-family:"Segoe UI", Roboto, sans-serif;}
+main {height:100%;display:flex;flex-direction:column;}
 
-  .screen{display:none;flex-direction:column;height:100%;}
-  .screen.active{display:flex;}
+.screen{display:none;flex-direction:column;height:100%;}
+.screen.active{display:flex;}
 
-  /* Login */
-  #loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;}
-  #loginScreen h2{font-size:2rem;margin-bottom:20px;}
-  #loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
-  #loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
+/* Login */
+#loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;}
+#loginScreen h2{font-size:2rem;margin-bottom:20px;}
+#loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
+#loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 
-  /* Chat List */
-  #chatListScreen{background:#fff;flex:1;}
-  #chatListHeader{background:#1a73e8;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
-  #chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
-  .chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
-  .chatItem:hover{background:#f1f5ff;}
+/* Chat List */
+#chatListScreen{background:#fff;flex:1;}
+#chatListHeader{background:#1a73e8;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
+#chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
+.chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
+.chatItem:hover{background:#f1f5ff;}
 
-  /* Bottom Menu */
-  #bottomMenu{display:flex;justify-content:space-around;align-items:center;position:fixed;bottom:0;left:0;width:100%;background:#1a73e8;padding:10px 0;}
-  #bottomMenu button{background:#fff;border:none;color:#1a73e8;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
+/* Bottom Menu */
+#bottomMenu{display:flex;justify-content:space-around;align-items:center;position:fixed;bottom:0;left:0;width:100%;background:#1a73e8;padding:10px 0;}
+#bottomMenu button{background:#fff;border:none;color:#1a73e8;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
 
-  /* Chat */
-  #chatScreen{background:#e8f0fe;}
-  #chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
-  #chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
-  #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
-  .msg{max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;position:relative;word-wrap:break-word;}
-  .me{align-self:flex-end;background:#cfe2ff;}
-  .them{align-self:flex-start;background:#fff;}
-  .timestamp{font-size:0.75rem;color:#666;text-align:right;margin-top:2px;}
+/* Chat */
+#chatScreen{background:#e8f0fe;flex:1;display:flex;flex-direction:column;}
+#chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
+#chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
+#messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
+.msg{max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;position:relative;word-wrap:break-word;}
+.me{align-self:flex-end;background:#cfe2ff;}
+.them{align-self:flex-start;background:#fff;}
+.timestamp{font-size:0.75rem;color:#666;text-align:right;margin-top:2px;}
 
-  /* Reply Bar */
-  #replyBar{display:none;background:#e3f2fd;padding:6px 10px;border-left:4px solid #1a73e8;font-size:0.9rem;align-items:center;display:flex;justify-content:space-between;}
-  #replyText{flex:1;}
-  #cancelReply{background:none;border:none;color:#1a73e8;font-weight:bold;cursor:pointer;margin-left:10px;}
+/* Reply Bar */
+#replyBar{display:none;background:#e3f2fd;padding:6px 10px;border-left:4px solid #1a73e8;font-size:0.9rem;align-items:center;justify-content:space-between;display:flex;}
+#replyText{flex:1;}
+#cancelReply{background:none;border:none;color:#1a73e8;font-weight:bold;cursor:pointer;margin-left:10px;}
 
-  #inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;}
-  #message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
-  #sendBtn{background:#1a73e8;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
+#inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;}
+#message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
+#sendBtn{background:#1a73e8;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
 
-  @media (min-width:700px){main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}#bottomMenu{position:static;border-top:1px solid #ccc;}}
+@media (min-width:700px){main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}#bottomMenu{position:static;border-top:1px solid #ccc;}}
 </style>
 </head>
 <body>
@@ -68,6 +68,7 @@
     <div id="bottomMenu">
       <button id="dmBtn">DM</button>
       <button id="groupBtn">Group</button>
+      <button id="helpBtn">Help</button>
       <button id="logoutBtn">Logout</button>
     </div>
   </section>
@@ -94,16 +95,15 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebas
 import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 import { getDatabase, ref, set, push, get, onChildAdded, off } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-   const firebaseConfig = {
-    apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
-    authDomain: "messagingapp-7ede5.firebaseapp.com",
-    databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
-    projectId: "messagingapp-7ede5",
-    storageBucket: "messagingapp-7ede5.firebasestorage.app",
-    messagingSenderId: "221896974865",
-    appId: "1:221896974865:web:3faca4885e48ee656907b0"
-
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
+  authDomain: "messagingapp-7ede5.firebaseapp.com",
+  databaseURL: "https://messagingapp-7ede5-default-rtdb.firebaseio.com",
+  projectId: "messagingapp-7ede5",
+  storageBucket: "messagingapp-7ede5.firebasestorage.app",
+  messagingSenderId: "221896974865",
+  appId: "1:221896974865:web:3faca4885e48ee656907b0"
+};
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getDatabase(app);
@@ -237,6 +237,45 @@ document.getElementById("dmBtn").onclick=async()=>{
   loadChats();
 };
 
+// Help Button
+document.getElementById("helpBtn").onclick=async()=>{
+  const usersSnap = await get(ref(db,"users"));
+  let helpUser=null;
+  usersSnap.forEach(u=>{if(u.val().username==="Whisp_Management") helpUser={uid:u.key,username:u.val().username}});
+  if(!helpUser){
+    const newHelpRef=push(ref(db,"users"));
+    await set(newHelpRef,{username:"Whisp_Management",email:"whisp@support.com"});
+    helpUser={uid:newHelpRef.key,username:"Whisp_Management"};
+  }
+
+  const chatsSnap = await get(ref(db,"chats"));
+  let chatId=null;
+  if(chatsSnap.exists()){
+    chatsSnap.forEach(c=>{
+      const chat=c.val();
+      if(!chat.isGroup && chat.members.includes(currentUser.uid) && chat.members.includes(helpUser.uid)){
+        chatId=c.key;
+      }
+    });
+  }
+  if(!chatId){
+    const newChatRef=push(ref(db,"chats"));
+    await set(newChatRef,{name:"Whisp_Management",isGroup:false,members:[currentUser.uid,helpUser.uid]});
+    chatId=newChatRef.key;
+  }
+
+  openChat(chatId,"Whisp_Management");
+
+  const messagesRef=ref(db,`chats/${chatId}/messages`);
+  onChildAdded(messagesRef, async snap=>{
+    const msg=snap.val();
+    if(msg.sender===currentUser.uid){
+      await push(ref(db,`chats/${chatId}/messages`),{sender:helpUser.uid,text:"Thank you for messaging Whisp Management. We will respond to your message as soon as possible.",time:Date.now()});
+    }
+  });
+};
+
+// Notifications
 if("serviceWorker"in navigator){navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission());}
 function showNotification(title,body){
   if(!("Notification"in window))return;
